// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|Trash trash argument 1`] = `
Object {
  "trash": Object {
    "errorCode": null,
    "trashable": Object {
      "trashed": true,
      "trashedReason": "ON PEUT PLUS DIRE CA",
      "trashedStatus": "INVISIBLE",
    },
  },
}
`;

exports[`Internal|Trash try to trash non trashable entity 1`] = `
Object {
  "trash": Object {
    "errorCode": "TRASHABLE_NOT_FOUND",
    "trashable": null,
  },
}
`;

exports[`Internal|Untrash try to untrash argument not trashed 1`] = `
Object {
  "untrash": Object {
    "errorCode": "NOT_TRASHED",
    "trashable": null,
  },
}
`;

exports[`Internal|Untrash try to untrash non trashable entity 1`] = `
Object {
  "untrash": Object {
    "errorCode": "TRASHABLE_NOT_FOUND",
    "trashable": null,
  },
}
`;

exports[`Internal|Untrash untrash argument 1`] = `
Object {
  "untrash": Object {
    "errorCode": null,
    "trashable": Object {
      "trashed": false,
      "trashedReason": null,
      "trashedStatus": null,
    },
  },
}
`;
